--- a/client/src/components/cart/cart.css
+++ b/client/src/components/cart/cart.css
@@ -81,11 +81,11 @@
     margin-bottom: 5px;
 }
 
-.right_cart h4{
+/* .right_cart h4{
     font-weight: 500;
     font-size: 20px;
     margin-bottom: 15px;
-}
+} */
 
 .right_cart .mrp{
     margin-top: 10px;
